maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:31: error: ':' expected but ',' found.
def remplir(x,y) {
             ^JediEscaper:119: error: identifier expected but '}' found.
}
^